Closed Bug 554202 Opened 15 years ago Closed 15 years ago

Crash due to too much recursion in nsSMILInstanceTime::BreakPotentialCycle

Categories

(Core :: SVG, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: birtles)

References

Details

(Keywords: crash, testcase)

Attachments

(2 files)

No description provided.
Assignee: nobody → birtles
Status: NEW → ASSIGNED
Proposed patch. There are three issues with the existing codebase: 1) The way we try to manage certain types of cycles is flawed as attachment 434902 [details] [diff] [review] demonstrates. Ironically, if there is such a cycle we jump right in and follow it forever. (Included as crashtest/554202-1.svg) 2) Even if we didn't get caught up in (1) we're still not actually breaking the cycles (as demonstrated by added crashtest/554202-2.svg) 3) There's some indeterminancy in how we prioritise animations in such cycles (as demonstrated by added reftest sandwich-priority-12.svg) This patch fixes the above.
Attachment #447450 - Flags: review?(roc)
Is this fixed now?
(In reply to comment #3) > Is this fixed now? Yes, fixed. I was just waiting to make sure there were no problems with the build before marking the bug.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: